# AVPLines

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  dependencies.txt
AVPLines_project/: AVPLines_project.sln  AVPLines_project.vcxproj  AVPLines_project.vcxproj.filters
AVPLines_project/include/: CFile.hpp  CMarkPoint.hpp  CSlot.hpp  main.hpp
AVPLines_project/src/: CFile.cpp  CMarkPoint.cpp  CSlot.cpp  main.cpp
include/vs/AVPLines/: CFile.hpp  CMarkPoint.hpp  CSlot.hpp  main.hpp
include/vs/CPD/: CFile.hpp  CMarkPoint.hpp  CSlot.hpp  main.hpp
include/vs/PCD/: CFile.hpp  CMarkPoint.hpp  CSlot.hpp  main.hpp
scripts/: launch_exe.bat  launch_project_exe.bat  launch_project_ide.bat
source/: CFile.cpp  CMarkPoint.cpp  CSlot.cpp  jsoncpp.cpp  main.cpp
test/: CMakeLists.txt  dependencies.txt
test/source/: main.cpp
